[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/NPCDialogUI.gd" id="1_npc_dialog"]

[node name="NPCDialogUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_npc_dialog")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(900, 300)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -350.0
offset_right = 450.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpriteContainer" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 250.0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SpriteRect" type="TextureRect" parent="Panel/SpriteContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -630.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "NPC Name"

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "NPC Title"

[node name="DialogBox" type="PanelContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBox/DialogBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="DialogText" type="Label" parent="Panel/VBox/DialogBox/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "NPC Dialogue Text will appear here..."
autowrap_mode = 3
visible_ratio = 1.0

[node name="RepLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Reputation: 0 (Neutral)"
horizontal_alignment = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="NextBtn" type="Button" parent="Panel/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "ต่อไป"

[node name="InteractBtn" type="Button" parent="Panel/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "ตกลง"

[node name="CloseBtn" type="Button" parent="Panel/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "ออก"
